--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "symfony/webpack-encore-bundle": "^1.7",
         "symfony/yaml": "5.0.*",
         "twig/string-extra": "^3.0",
-        "twig/twig": "^3.0"
+        "twig/twig": "^3.0",
+        "vaimo/composer-patches": "^4.20"
     },
     "require-dev": {
     },
