--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -2,11 +2,16 @@ security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
         in_memory: { memory: null }
+        user_provider:
+            entity:
+                class:  App\Entity\User
+                property: email
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
+            provider: user_provider
             anonymous: lazy
 
             # activate different ways to authenticate
@@ -18,5 +23,10 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/profile, roles: ROLE_USER }
+
+
+    #Encodage du mot de passe
+    encoders:
+        App\Entity\User: bcrypt
