--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "symfony/debug-pack": "^1.0",
         "symfony/dependency-injection": "5.0.*",
         "symfony/dotenv": "5.0.*",
+        "symfony/expression-language": "5.0.*",
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.0.*",
         "symfony/framework-bundle": "5.0.*",
@@ -24,7 +25,8 @@
         "symfony/yaml": "5.0.*",
         "twig/string-extra": "^3.0",
         "twig/twig": "^3.0",
-        "vaimo/composer-patches": "^4.20"
+        "vaimo/composer-patches": "^4.20",
+      "ext-http": "*"
     },
     "require-dev": {
     },
