--- a/.env
+++ b/.env
@@ -25,6 +25,6 @@ APP_SECRET=bbfdf6eec38cb39db0d7c3a996f47fa9
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=UTF-8"
 # IMPORTANT: You MUST configure your db driver and server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:@127.0.0.1:3306/discovermyisland?serverVersion=mariadb-10.4.6
+DATABASE_URL=mysql://root:@127.0.0.1:3306/discovermyisland2
 #DATABASE_URL=mysql://root:root@127.0.0.1:8889/discovermyisland?serverVersion=mariadb-10.4.6
 ###< doctrine/doctrine-bundle ###
