--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "twig/string-extra": "^3.0",
         "twig/twig": "^3.0",
         "vaimo/composer-patches": "^4.20",
-      "ext-http": "*"
+      "ext-http": "*",
+      "ext-iconv": "*"
     },
     "require-dev": {
     },
