--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     comments_directory: '%kernel.project_dir%/public/img/com-img'
+    avatar_directory: '%kernel.project_dir%/public/img/clients-img/avatar'
 services:
     # default configuration for services in *this* file
     _defaults:
