--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "mapbox-gl": "^1.6.0"
     }
 }
