--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "dropify": "^0.2.2",
         "mapbox-gl": "^1.6.0"
     }
 }
