--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,9 @@
 default_index:
     path: /
     controller: App\Controller\DefaultController::index
+
+easy_admin_bundle:
+    resource: '@EasyAdminBundle/Controller/EasyAdminController.php'
+    prefix: /_dmi_backend
+    type: annotation
+
