--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -12,6 +12,11 @@ easy_admin:
                     - alias
                     - content
                     - image
+                    - address
+                    - siteWeb
+                    - tel
+                    - openHour
+                    - visiteType
                     -  { property: 'category', type: 'entity', type_options: { class: 'App\Entity\Category', multiple: false } }
         Course:
             class: App\Entity\Course
