--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "symfony/http-foundation": "5.0.*",
         "symfony/maker-bundle": "^1.14",
         "symfony/orm-pack": "^1.0",
+        "symfony/property-access": "5.0.*",
         "symfony/security-bundle": "5.0.*",
         "symfony/validator": "5.0.*",
         "symfony/webpack-encore-bundle": "^1.7",
@@ -27,7 +28,8 @@
         "tightenco/collect": "^6.6",
         "twig/string-extra": "^3.0",
         "twig/twig": "^3.0",
-        "vaimo/composer-patches": "^4.20"
+        "vaimo/composer-patches": "^4.20",
+        "vich/uploader-bundle": "^1.12"
     },
     "require-dev": {
     },
