--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -30,7 +30,7 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/adminDMI, roles: ROLE_ADMIN }
         - { path: ^/profile, roles: ROLE_USER }
         - { path: ^/invited, roles: ROLE_VISITOR }
     role_hierarchy:
