--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=master
 APP_SECRET=bbfdf6eec38cb39db0d7c3a996f47fa9
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^localhost|example\.com$'
@@ -25,6 +25,7 @@ APP_SECRET=bbfdf6eec38cb39db0d7c3a996f47fa9
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=UTF-8"
 # IMPORTANT: You MUST configure your db driver and server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:@127.0.0.1:3306/discovermyisland?serverVersion=mariadb-10.4.6
-#DATABASE_URL=mysql://root:root@127.0.0.1:8889/discovermyisland?serverVersion=mariadb-10.4.6
+#DATABASE_URL=mysql://joas0860_root:dmi2019@localhost:3306/joas0860_discovermyisland?serverVersion=mariadb-10.4.6
+#DATABASE_URL=mysql://root:@127.0.0.1:3306/discovermyisland?serverVersion=mariadb-10.4.6
+DATABASE_URL=mysql://root:root@127.0.0.1:8889/discovermyisland?serverVersion=mariadb-10.4.6
 ###< doctrine/doctrine-bundle ###
